# runbooks

./: .gitignore  CLAUDE.md  EXAMPLE_NOTES.md  README.md  agent.md  alvin_briefing_20260416.json  example_briefing_krishnan_nyc_d25_2026-05-14.conversation-log.txt  example_briefing_krishnan_nyc_d25_2026-05-14.json  install.sh  translation_report.md
.github/: CODEOWNERS
books/: .env.example  CLAUDE.md  INDEX.md  (+21 more)
scripts/python/: briefing_to_pdf.py  circle_engagement.py  circle_query.py  clickup_api.py  cluster_voters.py  databricks_query.py  enrich_michigan_leads.py  find_top_issues_by_district.py  generate_briefing_pdf.py  generate_meeting_briefing.py  meeting_briefing_output_schema.json  meeting_briefing_product_spec.json  parse_conversation.py  publish_experiments.py  pyproject.toml  qa_init.py  qa_validate.py  query_by_zip.py  query_demographics.py  query_issue_scores.py  test_circle_engagement.py  test_circle_query.py  test_clickup_api.py  test_experiment_manifests.py  validate_contract.py  validate_meeting_briefing.py  voter_targeting_to_pdf.py  walking_plan_to_pdf.py
scripts/python/data/: curated_issue_columns.csv
scripts/python/output/exp1_alvin-TX_2026-04-16/: briefing.json  briefing.md
scripts/python/output/exp1_alvin-TX_2026-04-16_qa/: briefing.json  briefing.md  sources.json
scripts/python/output/exp2_alvin-TX_2026-04-16/: briefing.json  briefing.md  claims.json  sources.json
scripts/python/output/exp2_alvin-TX_2026-04-16_qa/: audit_meta.json  briefing.json  briefing.md  claims.json  params.json  qa_bundle.json  sources.json  verification_report.json
scripts/python/output/run-no-qa/: claims.json  sources.json
scripts/python/output/run-with-qa/: claims.json  qa_bundle.json
(+122 files in other folders)
