[project]
name = "runbook-scripts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "databricks-sql-connector",
    "pandas",
    "python-dotenv",
    "requests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pyright]
# basedpyright/pyright don't yet auto-resolve PEP 735 dependency-groups; point them
# at the uv-managed venv so dev-only imports (pytest) resolve in editors.
venvPath = "."
venv = ".venv"
