[project]
name = "runbook-scripts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.0",
    "databricks-sql-connector",
    "pandas",
    "python-dotenv",
    "requests",
]

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=9.0.3",
]

[tool.pyright]
# basedpyright/pyright don't yet auto-resolve PEP 735 dependency-groups; point them
# at the uv-managed venv so dev-only imports (pytest) resolve in editors.
venvPath = "."
venv = ".venv"
